--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mr. Foods</title>
+    <title>Paulistanos Pizzaria</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -15,9 +15,7 @@
         <div class="cliente-dados">
             <aside class="cliente-logo"></aside>
             <article class="cliente-contato">
-                <div class="div-cliente">
-                    <div class="cliente-nomeFantasia"></div>
-                </div>
+                <h1 class="cliente-nomeFantasia">Paulistano's Pizzaria e Chopperia</h1>
                 <h2>Faça seu pedido! &#128071;</h2>
                 <p>Aberto de Quarta a Domingo das 18:00hrs às 23:00hrs</p>
             </article>
@@ -25,7 +23,7 @@
     </header>
     <main>
         <section class="sistema">
-            <iframe id="ip-sistema" src="http://ipfixo.in:58785/" frameborder="0"
+            <iframe id="ip-sistema" src="http://pinha.dyndns.info:58080/" frameborder="0"
                 style="width: 100%; height: 100vh; margin: auto;"></iframe>
         </section>
     </main>
