--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paulistanos Pizzaria</title>
+    <title>Mr Bistteca Paranapanema</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -15,9 +15,9 @@
         <div class="cliente-dados">
             <aside class="cliente-logo"></aside>
             <article class="cliente-contato">
-                <h1 class="cliente-nomeFantasia">Paulistano's Pizzaria e Chopperia</h1>
+                <h1 class="cliente-nomeFantasia">Mr. Bistteca Paranapanema</h1>
                 <h2>Faça seu pedido! &#128071;</h2>
-                <p>Aberto de Quarta a Domingo das 18:00hrs às 23:00hrs</p>
+                <p>Aberto de Terça a Domingo das 10:00hrs às 23:00hrs</p>
             </article>
         </div>
     </header>
