--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <article class="cliente-contato">
                 <h1 class="cliente-nomeFantasia">Mr. Bistteca Paranapanema</h1>
                 <h2>Faça seu pedido! &#128071;</h2>
-                <p>Aberto de Terça a Domingo das 10:00hrs às 23:00hrs</p>
+                <p>Aberto de Terça a Domingo</p>
             </article>
         </div>
     </header>
     <main>
         <section class="sistema">
-            <iframe id="ip-sistema" src="http://pinha.dyndns.info:58080/" frameborder="0"
+            <iframe id="ip-sistema" src="http://ipfixo.in:55807/" frameborder="0"
                 style="width: 100%; height: 100vh; margin: auto;"></iframe>
         </section>
     </main>
